# mdedit

./: .gitignore  2026-03-12-101040-local-command-caveatcaveat-the-messages-below-w.txt  CHANGELOG.md  README.md  WINDOWS_BUILD.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/: settings.json
.moai/: manifest.json
.moai/cache/: mx-scan-progress.json
.moai/learning/: lesson-learned.md
.moai/plans/: architecture-plan.md
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: session-825c70b7-8f77-451a-852e-42b0b7a45b63.md  session-bca7a267-8307-4951-9f80-4b459f51ac2a.md  sync-report-SPEC-UI-004-2026-05-20.md  sync-report-preview-zoom-2026-05-21.md
.moai/state/: session-memo.md
docs/: AI-Best-Practice-MdEdit-Brief.md  AI-Best-Practice-MdEdit.md  USER_MANUAL.md
docs/design/: html-preview.md
e2e/: app-render.spec.ts  diagnostic.spec.ts  html-file-viewer.spec.ts  markdown-render.spec.ts  mermaid-subgraph-label.spec.ts  table-border.spec.ts
e2e/fixtures/: tauri-mock.ts  test-content.md
patches/: mermaid+11.12.3.patch
scripts/: prebuild.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/agent-memory/manager-tdd/: MEMORY.md
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: browser_ops.rs  directory_ops.rs  file_ops.rs  image_ops.rs  mod.rs  watcher.rs
src-tauri/src/models/: file_event.rs  file_node.rs  mod.rs
src-tauri/src/state/: app_state.rs  mod.rs
(+208 files in other folders)
