[package]
name = "mdedit"
version = "0.3.0"
description = "MdEdit - Markdown Desktop Editor"
authors = []
license = ""
repository = ""
default-run = "mdedit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mdedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mdedit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
